# verbose-octo-guide

./: .gitignore  .travis.yml  Procfile  README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt  run.py  utils.py  views.py
genome_sequencer/: __init__.py  app.py  config.py  db.py  models.py  utils.py  views.py
migrations/versions/: 05569e8547c6_.py  06114281aae8_.py  a493b155043b_.py  a7a2c6bb04f3_.py  c1197755e22a_.py
sequencer/: __init__.py  app.py  config.py  extensions.py  utils.py
sequencer/genome/: models.py  views.py
sequencer/user/: models.py  views.py
src/: app.py  config.py  models.py  utils.py  views.py
src/migrations/versions/: a7a2c6bb04f3_.py
tests/: conftest.py  factories.py  test_config.py  test_index_page.py  test_sequences.py  test_users.py
