[tool.poetry]
name = "backend"
version = "1.0.0"
description = "Server repo for the genome_sequencer project."
authors = [
    "Alex Antoniou <antoniouaa@hotmail.com>"
]
license = "MIT"
readme = "README.md"
homepage = "https://genome-sequencer.herokuapp.com"
repository = "https://github.com/antoniouaa/verbose-octo-guide"

[tool.poetry.dependencies]
python = "3.7.6"
virtualenv = "20.4.2"

Flask = "^1.1.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^3.25.0"
Flask-Migrate = "^2.6.0"
Flask-SQLAlchemy = "^2.4.4"
gunicorn = {version = "^20.0.4", platform = "linux"}
python-dotenv = "^0.15.0"
toml = "^0.10.2"
psycopg2 = {version = "^2.8.6", platform = "win32"}
psycopg2-binary = {version = "2.8.6", platform = "linux"}
pre-commit = "^2.10.1"
# dnatoolkit = { git = "https://github.com/bobroxq/DNA_Toolkit" }

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
python-coveralls = "^2.9.3"

[tool.poetry.dev-dependencies.black]
version = "20.8b1"
allow-prereleases = true
python = "3.7.6"
markers = "platform_python_implementation == 'CPython'"

[tool.coverage]
branch = true
exclude_lines = """
def __repr__
if __name__ == "__main__":
"""

[build-system]
requires = ["poetry>=1.1.4"]
build-backend = "poetry.masonry.api"
